--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
 }
 
 body{
-    font-family: sohne;
+    font-family: "sohne", sans-serif;
 }
 
 .container{
@@ -25,6 +25,34 @@ a{
     text-decoration: none;
     color: inherit;
 }
-header{
 
+.btn {
+    background: black;
+    color: white;
+    border-radius: 22px;
+    border: none;
+    padding: 8px 16px;
 }
+header{
+    border-bottom: 1px solid black;
+    padding: 20px;
+    font-size: 14px;
+}
+header .container{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    header nav {
+        display: flex;
+        gap: 20px;
+        align-items: center;
+    }
+
+    @media screen and (max-width: 728px){
+        md-hidden
+        {
+            display: none;
+        }
+    }
